--- a/data/themes/my_theme.toml
+++ b/data/themes/my_theme.toml
@@ -9,8 +9,8 @@ primary = "#38BF9F"
 
 # Menu
 menu_primary = "#F7F7F7"
-menu_text = "#FCA311"
-menu_text_active = "#0EAD69"
+menu_text = "#118AB2"
+menu_text_active = "#38BF9F"
 menu_title = "#118AB2"
 
 # Backgrounds
@@ -22,5 +22,5 @@ dark_background = ""
 dark_home_section_odd = ""
 dark_home_section_even = ""
 
-link = "#D90429"
+link = "#38BF9F"
 link_hover = "#118AB2"
