--- a/data/themes/my_theme.toml
+++ b/data/themes/my_theme.toml
@@ -9,9 +9,9 @@ primary = "#38BF9F"
 
 # Menu
 menu_primary = "#F7F7F7"
-menu_text = "#118AB2"
+menu_text = "#000000"
 menu_text_active = "#38BF9F"
-menu_title = "#118AB2"
+menu_title = "#000000"
 
 # Backgrounds
 background = "#F7F7F7"
@@ -19,7 +19,7 @@ home_section_odd = "#F7F7F7"
 home_section_even = "#F7F7F7"
 
 dark_background = ""
-dark_home_section_odd = ""
+dark_home_section_odd = "#6ca9bd"
 dark_home_section_even = ""
 
 link = "#38BF9F"
