--- a/data/themes/my_theme.toml
+++ b/data/themes/my_theme.toml
@@ -14,12 +14,12 @@ menu_text_active = "#38BF9F"
 menu_title = "#000000"
 
 # Backgrounds
-background = "#F7F7F7"
-home_section_odd = "#F7F7F7"
-home_section_even = "#F7F7F7"
+background = "#FFFFFF"
+home_section_odd = "#F6F6FF"
+home_section_even = "#FFFFFF"
 
 dark_background = ""
-dark_home_section_odd = "#6ca9bd"
+dark_home_section_odd = ""
 dark_home_section_even = ""
 
 link = "#38BF9F"
