--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -88,7 +88,7 @@ show_related = {docs = true, page = false, post = true, project = true, publicat
 ############################
 
 # Enter contact details (optional). To hide a field, clear it to "".
-email = "amal.ahmad@uni-goettingen.de"
+email = "amal.ahmad@wur.nl"
 phone = ""
 
 # Address
