--- a/data/themes/my_theme.toml
+++ b/data/themes/my_theme.toml
@@ -8,14 +8,14 @@ light = true
 primary = "#38BF9F"
 
 # Menu
-menu_primary = "#F7F7F7"
+menu_primary = "#EDC5C5"
 menu_text = "#000000"
 menu_text_active = "#38BF9F"
 menu_title = "#000000"
 
 # Backgrounds
 background = "#FFFFFF"
-home_section_even = "#F6F6FF"
+home_section_even = "#FFFFF6"
 home_section_odd = "#FFFFFF"
 
 dark_background = ""
