--- a/data/themes/my_theme.toml
+++ b/data/themes/my_theme.toml
@@ -15,7 +15,7 @@ menu_title = "#000000"
 
 # Backgrounds
 background = "#FFFFFF"
-home_section_even = "#FFFFF6"
+home_section_even = "#FFFFFF"
 home_section_odd = "#FFFFFF"
 
 dark_background = ""
