--- a/data/themes/my_theme.toml
+++ b/data/themes/my_theme.toml
@@ -5,12 +5,12 @@ name = "my_theme"
 light = true
 
 # Primary
-primary = "#E8C8AE"
+primary = "#E8A9A9"
 
 # Menu
-menu_primary = "#EDC5C5"
+menu_primary = "#F7EFE9"
 menu_text = "#000000"
-menu_text_active = "#E8C8AE"
+menu_text_active = "#E8A9A9"
 menu_title = "#000000"
 
 # Backgrounds
