--- a/data/themes/my_theme.toml
+++ b/data/themes/my_theme.toml
@@ -22,5 +22,5 @@ dark_background = ""
 dark_home_section_odd = ""
 dark_home_section_even = ""
 
-link = "#38BF9F"
+link = "#E8A9A9"
 link_hover = "#118AB2"
