--- a/data/themes/my_theme.toml
+++ b/data/themes/my_theme.toml
@@ -9,7 +9,7 @@ primary = "#E8A9A9"
 
 # Menu
 menu_primary = "#F7EFE9"
-menu_text = "#E8A9A9"
+menu_text = "#000000"
 menu_text_active = "#E8A9A9"
 menu_title = "#E8A9A9"
 
