--- a/data/themes/my_theme.toml
+++ b/data/themes/my_theme.toml
@@ -11,7 +11,7 @@ primary = "#E8A9A9"
 menu_primary = "#F7EFE9"
 menu_text = "#000000"
 menu_text_active = "#E8A9A9"
-menu_title = "#E8A9A9"
+menu_title = "#000000"
 
 # Backgrounds
 background = "#FFFFFF"
